# XBOOT

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  PATCHES_APPLIED.md  PRODUCTION_PATCH_PLAN_PASS7.md  README.md  UPGRADE_NOTES.md  remote-setup.sh  setup-linux-vm.sh  verify.sh
.agents_tmp/: PLAN.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml
demo/: .env.example  README.md  agent.py
deploy/: deploy.sh  grafana-dashboard.json  zeroboot.service
deploy/docker/: .env.example  Dockerfile.runtime  docker-compose.yml  docker-entrypoint.sh
deploy/k8s/: daemonset.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pvc-release.yaml  pvc-state.yaml  secret-example.yaml  service.yaml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  COMPATIBILITY.md  DEPLOYMENT.md  DOCKER.md  KUBERNETES.md
guest/: executor.py  init.c  limits.py  protocol.py  worker.py  worker_child.js  worker_child.py  worker_node.js  worker_supervisor.js  worker_supervisor.py
manifests/: firecracker.lock.json  kernel.manifest  node-build.lock.json  node-guest.manifest  python-build.lock.json  python-guest.manifest  runtime-artifacts.lock.json
scripts/: bench_compare.py  build_guest_rootfs.sh  build_release_tree.sh  build_reproducible_image.py  build_rootfs_image.sh  check_kvm_host.sh  create_release_bundle.sh  create_release_receipt.py  fetch_official_artifacts.sh  firecracker_compat.py  install_node_runtime.sh  make_api_keys.py  preflight.sh  prepare_rootfs_template.sh  repeat_smoke.sh  run_kvm_validation.sh  setup-docker.sh  smoke_exec.sh  validate_template_manifest.py  warm_pool_scaler.py
sdk/node/: README.md  package.json
sdk/node/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/zeroboot/: __init__.py  client.py
src/: auth.rs  config.rs  main.rs  protocol.rs  signing.rs  startup.rs  template_manifest.rs
src/api/: admin.rs  handlers.rs  mod.rs
src/bench/: mod.rs  report.rs  scenarios.rs
src/pool/: health.rs  lease.rs  manager.rs  mod.rs  policy.rs  recycler.rs  types.rs
src/vmm/: firecracker.rs  hvf.rs  kvm.rs  kvm_stub.rs  mod.rs  serial.rs  vmstate.rs  vmstate_stub.rs
tests/: test_bench_output_schema.py  test_docs_sanity.py  test_grafana_dashboard_metrics.py  test_guest_worker_subprocess.py  test_node_worker_protocol.py  test_repo_sanity.py  test_template_manifest_validator.py  test_warm_pool_scaler.py  test_worker_protocol.py
tests/fixtures/vmstate/: README.md
