[package]
name = "zeroboot"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Sub-millisecond VM sandboxes for AI agents via copy-on-write forking"
repository = "https://github.com/zeroboot/zeroboot"
keywords = ["vm", "sandbox", "kvm", "isolation", "firecracker"]
categories = ["virtualization"]

[dependencies]
libc = "0.2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.11"
hmac-sha256 = "1"
ring = "0.17"
base64 = "0.22"
hex = "0.4"
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = "0.24"
kvm-bindings = { version = "0.14", features = ["fam-wrappers"] }
vmm-sys-util = "0.15"
nix = { version = "0.31", features = ["fs", "mman", "ioctl"] }

[profile.release]
opt-level = 3
lto = true
