[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroboot"
version = "0.1.0"
description = "Client for the structured Zeroboot sandbox API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
keywords = ["sandbox", "code-execution", "vm", "isolation"]

[project.urls]
Homepage = "https://github.com/zeroboot/zeroboot"
Documentation = "https://github.com/zeroboot/zeroboot#python-sdk"
Issues = "https://github.com/zeroboot/zeroboot/issues"
